--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-firebase/app": "^7.3.1",
+    "@react-native-firebase/auth": "^8.0.8",
     "@react-navigation/native": "^5.6.1",
     "@react-navigation/stack": "^5.6.2",
     "@use-expo/font": "^2.0.0",
@@ -22,6 +24,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.0.tar.gz",
     "react-native-confetti-cannon": "^1.5.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-modal": "^11.5.6",
     "react-native-paper": "^3.10.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "3.0.2",
